fix(code): inline code overflow-wrap (#280)

--- a/assets/css/_mixin/_compatibility.scss
+++ b/assets/css/_mixin/_compatibility.scss
@@ -85,3 +85,8 @@
   -moz-appearance: $value;
   -webkit-appearance: $value;
 }
+
+@mixin overflow-wrap($value) {
+  word-wrap: $value;
+  overflow-wrap: $value;
+}
