--- a/assets/css/_mixin/_summary.scss
+++ b/assets/css/_mixin/_summary.scss
@@ -44,7 +44,7 @@
       width: 100%;
       overflow: hidden;
       text-overflow: ellipsis;
-      overflow-wrap: break-word;
+      @include overflow-wrap(break-word);
       color: $global-font-secondary-color;
 
       [theme=dark] & {
