--- a/assets/css/_page/_single.scss
+++ b/assets/css/_page/_single.scss
@@ -128,8 +128,7 @@
     @include link(false, false);
 
     a {
-      word-break: break-all;
-      word-break: break-word;
+      @include overflow-wrap(break-word);
 
       [theme=dark] & b, [theme=dark] & strong {
         color: $single-link-color-dark;
