--- a/assets/css/_partial/_single/_code.scss
+++ b/assets/css/_partial/_single/_code.scss
@@ -1,9 +1,11 @@
 code {
   display:inline-block;
+  max-width: 100%;
+  padding: 0 .4rem;
+  @include overflow-wrap(break-word);
   font-size: $code-font-size;
   font-family: $code-font-family;
   color: $code-color;
-  padding: 0 .4rem;
 
   [theme=dark] & {
     color: $code-color-dark;
